p42/SysCore/Lib/lib_deps.txt


andy@obsidian ~/plan_42/p42/SysCore/Lib $ g++ -MM *.cpp
cstd.cpp:12:2: error: #error "MOS2 Kernel C++ Runtime requires Microsoft Visual C++ 2005 or later."
 #error "MOS2 Kernel C++ Runtime requires Microsoft Visual C++ 2005 or later."
  ^
stdio.o: stdio.cpp
string.o: string.cpp
andy@obsidian ~/plan_42/p42/SysCore/Lib $ 


